# Yamfe

./: Makefile.am  README.md  configure.ac
data/: sample-fsm.json  screen.json  selection.json  splash.json  yamfe.ini  yamfe.json
src/: Makefile.am  fsm.vala  input.vala  mingle.vala  screen.vala  selection-screen.vala  splash-screen.vala  yamfe-image.vala  yamfe.vala
